fix: 리플렉션 디폴트 생성자 호출 방식 변경